Adjust text alignment and fix editable buttons

--- a/src/lwc/portalContactList/portalContactList.css
+++ b/src/lwc/portalContactList/portalContactList.css
@@ -20,6 +20,10 @@
   padding: 0;
 }
 
+.v-middle {
+  vertical-align: middle;
+}
+
 .underLined {
   border-bottom: 1px solid #e1e1e1;
   padding-bottom: 1%;
